<resources>
    <string name="app_name">Anahuac</string>
    <string name="hint_email_or_phone_number">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>

    <string name="btn_sigin">Log In</string>

    <string name="btn_alert">Alerta</string>
    <string name="btn_alerta_with_button">Alerta con botones</string>

    <string name="txt_title_sigin_now">Sign In Now</string>

    <string name="btn_alerta_with_options">Alerta con opciones</string>

    <string name="txt_help">Need Help?</string>

    <string name="txt_loginhome">LOGIN</string>

    <string name="txt_sign_up">Sign Up For Facebook</string>

    <string name="txt_remember">Remember me</string>
    <string name="txt_help_netflix">Need help?</string>

    <string name="txt_anahuac_cancun">Universidad Anáhuac - Campus Cancún</string>

    <string name="txt_new_netflix">New to Netflix?</string>
    <string name="txt_sign_up_now">Sign Up Now</string>

    <string name="txt_title_practicas">Practicas</string>
    <string name="txt_title_sigin_netflix">Sign In</string>

    <string name="ver_mas">VER MAS</string>

    <string name="txt_login_fb">Login with Facebook</string>
    <string name="txt_login_net">Login with Netflix</string>
    <string name="txt_login_campus">Login Campus</string>
    <string name="btn_sigin_netflix">Sign In</string>


</resources>