<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_top"
        android:background="@drawable/rectangle"/>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/netflix_logo_height"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginTop="16dp"
        android:src="@drawable/anahuac_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl_top"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_sigin_now"
        android:textColor="@color/orange"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card2"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_box"
        app:cardCornerRadius="@dimen/corner_radius2"
        app:layout_constraintTop_toBottomOf="@id/gl_center"
        app:cardBackgroundColor="@color/white">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:background="@null"
            android:hint="@string/hint_password"
            android:textColorHint="@color/gray"
            android:drawableLeft="@drawable/lock_icon"
            />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_box"
        app:cardCornerRadius="@dimen/corner_radius2"
        app:layout_constraintBottom_toTopOf="@id/card1"
        app:cardBackgroundColor="@color/white">

        <EditText
            android:layout_margin="@dimen/margin_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_or_phone_number"
            android:background="@null"
            android:drawableLeft="@drawable/user_icon"
            android:textColorHint="@color/gray"/>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_box"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_sigin"
        app:layout_constraintTop_toBottomOf="@id/line_buton"
        android:paddingVertical="16dp"
        android:elevation="3dp"/>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>








</androidx.constraintlayout.widget.ConstraintLayout>